<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	>

	<EditText
		android:id="@+id/inputField"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />

	<Button
		android:id="@+id/changeText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="New Button" android:onClick="onClick"/>

	<Button
		android:id="@+id/switchActivity"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="Change Text" android:onClick="onClick"/>
</LinearLayout>